<resources>
    <string name="GapValue">间距大小</string>
    <string name="Hardware">硬件教程</string>
    <string name="Software">软件教程</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="add">放大</string>
    <string name="agreement">许可协议</string>
    <string name="album_view">选择图片</string>
    <string name="antiWhite">黑底白字</string>
    <string name="app_name">Barsoft</string>
    <string name="attribute">属性</string>
    <string name="barcode">条码</string>
    <string name="barcodeAttribute">条码属性</string>
    <string name="barcodeCheck">条码长度错误</string>
    <string name="barcodeSet">条码设置</string>
    <string name="barcodeType">条码类型</string>
    <string name="basicCourse">基础教程</string>
    <string name="bluetooth_device_list">蓝牙设备列表</string>
    <string name="bluetooth_is_not_enabled">蓝牙未启用</string>
    <string name="buyJD">京东购买</string>
    <string name="buyTmall">天猫购买</string>
    <string name="canContectPrinter">可连接设备</string>
    <string name="changeMode">更改模式</string>
    <string name="characterSpace">字符间距</string>
    <string name="clickFinish">设置好后点完成</string>
    <string name="clickSearch">未连接设备(点击搜索)</string>
    <string name="closeMulti">点击收起多列标签设置(单列无需设置)</string>
    <string name="columnsCourse">多列教程</string>
    <string name="columnsGap">列间隙宽</string>
    <string name="complete">完成</string>
    <string name="confirmed">用户须知已确认</string>
    <string name="connect">连接</string>
    <string name="connected">已连接</string>
    <string name="connectedPrinter">已连接的设备</string>
    <string name="connecting">连接中</string>
    <string name="conntectMode">连接方式</string>
    <string name="conntectPrinter">连接蓝牙打印机</string>
    <string name="contactUs">联系我们</string>
    <string name="coordinate">字符坐标</string>
    <string name="copy">复制</string>
    <string name="correctFormat">输入文本格式不正确</string>
    <string name="costume">服装</string>
    <string name="crop__cancel">CANCEL</string>
    <string name="crop__done">DONE</string>
    <string name="crop__pick_error">No image sources available</string>
    <string name="crop__saving">Saving picture…</string>
    <string name="crop__wait">Please wait…</string>
    <string name="currentVersion">当前版本</string>
    <string name="cut">未连接</string>
    <string name="cutting">断开连接</string>
    <string name="dataType">数据类型</string>
    <string name="datasourceContent">请输入绑定数据源名</string>
    <string name="datasourceName">数据源名</string>
    <string name="date">日期</string>
    <string name="dateContent">日期内容</string>
    <string name="dateOffset">日期偏移</string>
    <string name="dateProperty">日期属性</string>
    <string name="dateType">日期格式</string>
    <string name="define">定制</string>
    <string name="delete">删除</string>
    <string name="deviceConnect">设备连接</string>
    <string name="deviceStatus">连接状态</string>
    <string name="direction">方向</string>
    <string name="disconnect">端口</string>
    <string name="dotLine">虚线</string>
    <string name="down">向下</string>
    <string name="dpiCourse">9134教程</string>
    <string name="edit">编辑</string>
    <string name="emptyAddress">无法判断打印机型号</string>
    <string name="emptyContent">内容不能为空</string>
    <string name="errorMode">无法判断打印机型号</string>
    <string name="error_null_cursor">Oops, something went wrong!</string>
    <string name="expandMulti">点击展开多列标签设置(单列无需设置)</string>
    <string name="filter_vcode">"0123456789abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ`¬!£$%^*()~=#{}[];':,./?/*-_+&lt;>@&amp;"</string>
    <string name="fixContent">固定内容</string>
    <string name="font">字体</string>
    <string name="fontSet">字体设置</string>
    <string name="fontSize">字体大小</string>
    <string name="fontStyle">字体样式</string>
    <string name="fontSytem">系统默认</string>
    <string name="gprinter001">Printer 001</string>
    <string name="gprinter002">Printer 002</string>
    <string name="gprinter003">Printer 003</string>
    <string name="gprinter004">Printer 004</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image">图像</string>
    <string name="image_view">单击选择</string>
    <string name="increment">递增量</string>
    <string name="init_port_info">地址: 未知</string>
    <string name="inputContent">双击输入内容</string>
    <string name="jewels">珠宝</string>
    <string name="labelColumns">标签列数</string>
    <string name="labelGap">间距</string>
    <string name="labelHeight">标签高度</string>
    <string name="labelMode">标签模式</string>
    <string name="labelMy">耗材购买</string>
    <string name="labelType">标签类型</string>
    <string name="labelWidth">标签宽度</string>
    <string name="languageSet">语言设置</string>
    <string name="lastPrinter">上次连接的设备</string>
    <string name="left">向左</string>
    <string name="limit_exceeded">最多能选 %d 张</string>
    <string name="line">直线</string>
    <string name="lineAttribute">线条属性</string>
    <string name="lineLength">线长</string>
    <string name="lineType">线条类型</string>
    <string name="lineWidth">线宽</string>
    <string name="loading">加载中…</string>
    <string name="lock">锁定</string>
    <string name="logo">标志</string>
    <string name="machineType">机器类型</string>
    <string name="mall">商城</string>
    <string name="msg_compress_failed">有压缩失败的图片</string>
    <string name="msg_crop_canceled">" 取消裁切"</string>
    <string name="msg_crop_failed">有裁切失败的图片</string>
    <string name="msg_operation_canceled">操作被取消</string>
    <string name="my">我的</string>
    <string name="newLabel">新建</string>
    <string name="none_bluetooth_device_found">未发现蓝牙设备</string>
    <string name="none_paired">none paired</string>
    <string name="none_usb_device">无USB设备连接</string>
    <string name="normal">普通</string>
    <string name="notSupport">设备不支持蓝牙</string>
    <string name="offsetGap">标记偏移</string>
    <string name="opt_privacy">隐私政策</string>
    <string name="opt_terms">用户协议</string>
    <string name="permission_camera">相机权限</string>
    <string name="permission_camera_description">用于拍摄照片和录制视频</string>
    <string name="permission_denied_albums">Allow access to photos, media and files on your device to view albums</string>
    <string name="permission_denied_images">Allow access to photos, media and files on your device to view images</string>
    <string name="permission_get">Barsoft需要获得以下权限</string>
    <string name="permission_know">我已知晓</string>
    <string name="permission_labelName">Barsoft云标签</string>
    <string name="permission_location">位置权限</string>
    <string name="permission_location_description1">根据安卓系统要求，连接设备需要授权位置权限</string>
    <string name="permission_location_description2">仅用于连接设备，不会上传您的位置信息</string>
    <string name="permission_storage">储存权限</string>
    <string name="permission_storage_description">用于缓存数据</string>
    <string name="pickerview_cancel">取消</string>
    <string name="pickerview_day">日</string>
    <string name="pickerview_hours">时</string>
    <string name="pickerview_minutes">分</string>
    <string name="pickerview_month">月</string>
    <string name="pickerview_seconds">秒</string>
    <string name="pickerview_submit">确定</string>
    <string name="pickerview_year">年</string>
    <string name="port">端口: 未设置</string>
    <string name="position">字符位置</string>
    <string name="prefix">前缀</string>
    <string name="priceCourse">价签教程</string>
    <string name="priceTag">价签</string>
    <string name="print">打印</string>
    <string name="printCopies">打印份数</string>
    <string name="printDensity">打印浓度</string>
    <string name="printDirection">打印方向</string>
    <string name="printMode">打印模式</string>
    <string name="printOption">打印选项</string>
    <string name="printQuality">打印质量</string>
    <string name="printSpeed">打印速度</string>
    <string name="printTip">正在打印中</string>
    <string name="printerID">设备号</string>
    <string name="privacy">隐私协议</string>
    <string name="privacy_agree">同意</string>
    <string name="privacy_exit">退出</string>
    <string name="privacy_tips">欢迎使用Barsoft！为了保护您的隐私和使用安全，请您务必仔细阅读我们的《用户协议》和《隐私政策》。在确认充分理解并同意后再开始使用此应用。感谢！</string>
    <string name="privacy_tips_key1">《用户协议》</string>
    <string name="privacy_tips_key2">《隐私政策》</string>
    <string name="qr">二维</string>
    <string name="qrAttribute">二维码属性</string>
    <string name="receiptMode">票据模式</string>
    <string name="rectangle">矩形</string>
    <string name="reduce">缩小</string>
    <string name="referenceGap">垂直偏移</string>
    <string name="right">向右</string>
    <string name="rotate">旋转</string>
    <string name="round">圆形</string>
    <string name="rowSpace">行间距</string>
    <string name="save">保存</string>
    <string name="scan">扫描</string>
    <string name="scanBatch">批量</string>
    <string name="scanPrinter">扫描设备</string>
    <string name="scaning">扫描中</string>
    <string name="search_menu_title">Search</string>
    <string name="select_bluetooth_device">选择蓝牙设备</string>
    <string name="selected">已选</string>
    <string name="serialContent">序列内容</string>
    <string name="serialCourse">连号教程</string>
    <string name="setBluetooth">设置蓝牙连接</string>
    <string name="setUp">设置</string>
    <string name="str_bluetooth_connect">蓝牙</string>
    <string name="suffix">后缀</string>
    <string name="syncExcel">Excel导入</string>
    <string name="syncTemplate">模板同步</string>
    <string name="textContent">文本内容</string>
    <string name="textProperty">文本属性</string>
</resources>