<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/gray" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <include layout="@layout/title_bar" />
    <TextView android:id="@id/textView" android:text="@string/textProperty" style="@style/setting_text" />
    <com.bd.printer.btapp.ui.widgets.view.CountView2 android:id="@id/barcode_dataType" android:layout_width="match_parent" android:layout_height="48.0dp" app:left_text="@string/dataType" app:right_text="@string/fixContent" />
    <LinearLayout android:background="@color/white" android:layout_width="match_parent" android:layout_height="48.0dp">
        <TextView android:textColor="@color/text_color" android:layout_gravity="center_vertical" android:id="@id/et_barcode_content" android:layout_width="0.0dp" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/putong_padding" android:text="@string/textContent" android:layout_weight="1.0" />
        <FrameLayout android:layout_gravity="center_vertical" android:padding="0.0dp" android:layout_width="0.0dp" android:layout_height="wrap_content" android:layout_marginRight="7.0dp" android:layout_weight="2.9">
            <EditText android:id="@id/et_bc_text" android:background="@drawable/et_bg" android:padding="5.0dp" android:layout_width="match_parent" android:layout_height="match_parent" android:hint="@string/inputContent" android:maxLines="1" android:lines="1" android:singleLine="true" android:digits="@string/filter_vcode" android:inputType="number" />
            <EditText android:id="@id/et_bc_text2" android:background="@drawable/et_bg" android:padding="5.0dp" android:layout_width="match_parent" android:layout_height="match_parent" android:hint="@string/inputContent" android:maxLines="1" android:lines="1" android:singleLine="true" />
        </FrameLayout>
    </LinearLayout>
    <LinearLayout android:id="@id/barcodeCount1" android:background="@color/white" android:layout_width="match_parent" android:layout_height="48.0dp">
        <TextView android:textColor="@color/text_color" android:layout_gravity="center_vertical" android:layout_width="0.0dp" android:layout_height="wrap_content" android:layout_marginLeft="12.0dp" android:text="@string/prefix" android:layout_weight="1.0" />
        <EditText android:layout_gravity="center_vertical" android:id="@id/barcode_before" android:background="@drawable/et_bg" android:padding="5.0dp" android:layout_width="0.0dp" android:layout_height="wrap_content" android:layout_marginRight="7.0dp" android:hint="@string/inputContent" android:lines="1" android:singleLine="true" android:layout_weight="2.9" />
    </LinearLayout>
    <LinearLayout android:id="@id/barcodeCount2" android:background="@color/white" android:layout_width="match_parent" android:layout_height="48.0dp">
        <TextView android:textColor="@color/text_color" android:layout_gravity="center_vertical" android:layout_width="0.0dp" android:layout_height="wrap_content" android:layout_marginLeft="12.0dp" android:text="@string/suffix" android:layout_weight="1.0" />
        <EditText android:layout_gravity="center_vertical" android:id="@id/barcode_after" android:background="@drawable/et_bg" android:padding="5.0dp" android:layout_width="0.0dp" android:layout_height="wrap_content" android:layout_marginRight="7.0dp" android:hint="@string/inputContent" android:lines="1" android:singleLine="true" android:layout_weight="2.9" />
    </LinearLayout>
    <LinearLayout android:id="@id/barcodeCount3" android:background="@color/white" android:layout_width="match_parent" android:layout_height="48.0dp">
        <com.bd.printer.btapp.ui.widgets.view.CountView android:id="@id/barcode_increment" android:layout_width="match_parent" android:layout_height="48.0dp" app:cv_name="@string/increment" app:cv_num="1" />
    </LinearLayout>
    <TextView android:text="@string/barcodeSet" style="@style/setting_text" />
    <com.bd.printer.btapp.ui.widgets.view.CountView2 android:id="@id/cv_format" android:layout_width="match_parent" android:layout_height="@dimen/putong_viewheight" app:left_text="@string/barcodeType" />
    <com.bd.printer.btapp.ui.widgets.view.CountView2 android:id="@id/cv_textposition" android:layout_width="match_parent" android:layout_height="@dimen/putong_viewheight" app:left_text="@string/coordinate" />
    <com.bd.printer.btapp.ui.widgets.view.CountView2 android:id="@id/cv_textalign" android:layout_width="match_parent" android:layout_height="@dimen/putong_viewheight" app:left_text="@string/position" />
    <LinearLayout android:background="@color/white" android:layout_width="match_parent" android:layout_height="48.0dp">
        <TextView android:textColor="@color/text_color" android:layout_gravity="center_vertical" android:layout_width="0.0dp" android:layout_height="wrap_content" android:layout_marginLeft="12.0dp" android:text="@string/datasourceName" android:layout_weight="1.0" />
        <EditText android:layout_gravity="center_vertical" android:id="@id/et_dt_name" android:background="@drawable/et_bg" android:padding="5.0dp" android:layout_width="0.0dp" android:layout_height="wrap_content" android:layout_marginRight="7.0dp" android:hint="@string/datasourceContent" android:lines="1" android:singleLine="true" android:layout_weight="2.9" />
    </LinearLayout>
    <LinearLayout android:background="@color/white" android:layout_width="match_parent" android:layout_height="wrap_content">
        <View android:background="@color/line_bg" android:layout_width="match_parent" android:layout_height="1.0px" />
    </LinearLayout>
    <com.bd.printer.btapp.ui.widgets.view.CountView2 android:id="@id/cv_typeface_code" android:visibility="visible" android:layout_width="match_parent" android:layout_height="@dimen/putong_viewheight" app:left_text="@string/font" app:right_text="@string/fontSytem" />
    <com.bd.printer.btapp.ui.widgets.view.CountView android:id="@id/cv_textsize_code" android:layout_width="match_parent" android:layout_height="@dimen/putong_viewheight" app:cv_name="@string/fontSize" app:cv_num="1" />
    <com.bd.printer.btapp.ui.widgets.view.CountView2 android:id="@id/cv_fontstyle_code" android:layout_width="match_parent" android:layout_height="@dimen/putong_viewheight" app:left_text="@string/fontStyle" />
</LinearLayout>
